docs: add DLINK-POC cluster configurations